// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`v37 E2E encryption: append target to joey 1`] = `
Map {
  ProfileIdentifier {
    "network": "localhost",
    "userId": "joey",
  } => Object {
    "status": "fulfilled",
    "value": Object {
      "encryptedPostKey": Uint8Array [ a69db582d0ddb50c4d55625e92f862ef65627ce9ade025340b0a2d130ac3aa66263b96803b5c5d7130889d91fa8ae3da ],
      "ephemeralPublicKey": CryptoKey { [opaque crypto key material] },
      "target": ProfileIdentifier {
        "network": "localhost",
        "userId": "joey",
      },
    },
  },
}
`;

exports[`v37 E2E encryption: decrypted as author 1`] = `
Array [
  Object {
    "event": "E2E",
    "type": "progress",
  },
  Object {
    "content": Object {
      "content": "hello world",
      "meta": undefined,
      "serializable": true,
      "type": "text",
      "version": 1,
    },
    "type": "success",
  },
]
`;

exports[`v37 E2E encryption: decrypted as jack 1`] = `
Array [
  Object {
    "event": "E2E",
    "type": "progress",
  },
  Object {
    "content": Object {
      "content": "hello world",
      "meta": undefined,
      "serializable": true,
      "type": "text",
      "version": 1,
    },
    "type": "success",
  },
]
`;

exports[`v37 E2E encryption: decrypted as joey 1`] = `
Array [
  Object {
    "event": "E2E",
    "type": "progress",
  },
  Object {
    "content": Object {
      "content": "hello world",
      "meta": undefined,
      "serializable": true,
      "type": "text",
      "version": 1,
    },
    "type": "success",
  },
]
`;

exports[`v37 E2E encryption: encrypted 1`] = `
Object {
  "author": ProfileIdentifier {
    "network": "localhost",
    "userId": "bob",
  },
  "e2e": Map {
    ProfileIdentifier {
      "network": "localhost",
      "userId": "jack",
    } => Object {
      "status": "fulfilled",
      "value": Object {
        "encryptedPostKey": Uint8Array [ 2efdd4b0b30e637e0a5477269e9ffe0603739d0b2dc381b20ac256cf897b822cc6a8263039bf8a56c723528b8919a336 ],
        "target": ProfileIdentifier {
          "network": "localhost",
          "userId": "jack",
        },
      },
    },
  },
  "identifier": PostIVIdentifier {
    "network": "localhost",
    "postIV": "Z/9AS037AaQi7QQQfq+OIw==",
  },
  "output": Uint8Array [ 009700a96c6f63616c686f7374a3626f6202c42103fbdd1a19eeb484e44ced760c141ff185b4bef2eb8998a052054cb7e4548716bf9401c430e3b51fe6c57b5831460666e8ddf01b49ebb513848cc9eb014a4c322b3afbbf0af21a902912080179494adc12941bc3dbc41067ff404b4dfb01a422ed04107eaf8e2381a132c42102640c0574dbba0be00e7e6f0080fb2f4428f72245b5adb4d3bd95694d645a6b24c42251312d4d2137b78846f8cd793113e78726fef59ec68c2335a51d6a27d12d4c78172d ],
  "postKey": CryptoKey { [opaque crypto key material] },
}
`;

exports[`v37 E2E encryption: parsed 1`] = `
Object {
  "author": Ok(Some(ProfileIdentifier {
    "network": "localhost",
    "userId": "bob",
  })),
  "authorPublicKey": Ok(Some(Object {
    "algr": 2,
    "key": CryptoKey { [opaque crypto key material] },
  })),
  "encrypted": Ok(Uint8Array [ 51312d4d2137b78846f8cd793113e78726fef59ec68c2335a51d6a27d12d4c78172d ]),
  "encryption": Ok(Object {
    "ephemeralPublicKey": Object {
      "2": Ok(Object {
        "algr": 2,
        "key": CryptoKey { [opaque crypto key material] },
      }),
    },
    "iv": Ok(Uint8Array [ 67ff404b4dfb01a422ed04107eaf8e23 ]),
    "ownersAESKeyEncrypted": Ok(Uint8Array [ e3b51fe6c57b5831460666e8ddf01b49ebb513848cc9eb014a4c322b3afbbf0af21a902912080179494adc12941bc3db ]),
    "type": "E2E",
  }),
  "signature": Ok(None),
  "version": -37,
}
`;

exports[`v37 public encryption: full v37 1`] = `
Object {
  "author": ProfileIdentifier {
    "network": "localhost",
    "userId": "alice",
  },
  "e2e": undefined,
  "identifier": PostIVIdentifier {
    "network": "localhost",
    "postIV": "AAECAwQFBgcICQoLDA0ODw==",
  },
  "output": Uint8Array [ 009700a96c6f63616c686f7374a5616c69636502c42102afdb55600abe8749b944469377a78c4d60522bb64842ccf0820a225346a8e58c9300c42025186b44aca49a79b749bb8dc3a39c5c5fe38b0d202255b742258d574d6379a1c410000102030405060708090a0b0c0d0e0fc463422847d65139731573ca340118fa81883ae4cffa41cb7c91d378dd43c72ebad227c7af84e61f19fd4820fca920472d68a1076ccbe42f620eb73036bc7e13eb330d6f065c1e6ea02cb219d3e8a06a31a58d3d0b52bf8a8d03a0d001119d1b93f377ceab ],
  "postKey": CryptoKey { [opaque crypto key material] },
}
`;

exports[`v37 public encryption: full v37 decrypted 1`] = `
Array [
  Object {
    "content": Object {
      "items": Array [
        Object {
          "content": "hi",
          "meta": undefined,
          "serializable": true,
          "type": "text",
          "version": 1,
        },
        Object {
          "content": "text 2",
          "meta": undefined,
          "serializable": true,
          "type": "text",
          "version": 1,
        },
      ],
      "meta": Object {
        "io.plugin.something": Object {
          "dict": Object {
            "a": Array [
              1,
              2,
            ],
            "b": true,
            "c": false,
          },
          "nul": null,
          "num": 2345,
          "str": "123",
        },
      },
      "type": "tuple",
    },
    "type": "success",
  },
]
`;

exports[`v37 public encryption: full v37 parsed 1`] = `
Object {
  "author": Ok(Some(ProfileIdentifier {
    "network": "localhost",
    "userId": "alice",
  })),
  "authorPublicKey": Ok(Some(Object {
    "algr": 2,
    "key": CryptoKey { [opaque crypto key material] },
  })),
  "encrypted": Ok(Uint8Array [ 422847d65139731573ca340118fa81883ae4cffa41cb7c91d378dd43c72ebad227c7af84e61f19fd4820fca920472d68a1076ccbe42f620eb73036bc7e13eb330d6f065c1e6ea02cb219d3e8a06a31a58d3d0b52bf8a8d03a0d001119d1b93f377ceab ]),
  "encryption": Ok(Object {
    "AESKey": Ok(CryptoKey { [opaque crypto key material] }),
    "iv": Ok(Uint8Array [ 000102030405060708090a0b0c0d0e0f ]),
    "type": "public",
  }),
  "signature": Ok(None),
  "version": -37,
}
`;

exports[`v37 public encryption: minimal v37 1`] = `
Object {
  "author": ProfileIdentifier {
    "network": "localhost",
    "userId": "alice",
  },
  "e2e": undefined,
  "identifier": PostIVIdentifier {
    "network": "localhost",
    "postIV": "AAECAwQFBgcICQoLDA0ODw==",
  },
  "output": Uint8Array [ 009700a96c6f63616c686f7374a5616c696365c0c09300c42025186b44aca49a79b749bb8dc3a39c5c5fe38b0d202255b742258d574d6379a1c410000102030405060708090a0b0c0d0e0fc422422847d751786b14798828024dea879478f32c9aed87c5f427ae352faa7b50a13721 ],
  "postKey": CryptoKey { [opaque crypto key material] },
}
`;

exports[`v37 public encryption: minimal v37 decrypted 1`] = `
Array [
  Object {
    "content": Object {
      "content": "hello world",
      "meta": undefined,
      "serializable": true,
      "type": "text",
      "version": 1,
    },
    "type": "success",
  },
]
`;

exports[`v37 public encryption: minimal v37 parsed 1`] = `
Object {
  "author": Ok(Some(ProfileIdentifier {
    "network": "localhost",
    "userId": "alice",
  })),
  "authorPublicKey": Ok(None),
  "encrypted": Ok(Uint8Array [ 422847d751786b14798828024dea879478f32c9aed87c5f427ae352faa7b50a13721 ]),
  "encryption": Ok(Object {
    "AESKey": Ok(CryptoKey { [opaque crypto key material] }),
    "iv": Ok(Uint8Array [ 000102030405060708090a0b0c0d0e0f ]),
    "type": "public",
  }),
  "signature": Ok(None),
  "version": -37,
}
`;

exports[`v38 E2E encryption: append target to joey 1`] = `
Map {
  ProfileIdentifier {
    "network": "localhost",
    "userId": "joey",
  } => Object {
    "status": "fulfilled",
    "value": Object {
      "encryptedPostKey": Uint8Array [ e8cde41c96849e9237068dba7bc777601b31b84587f2a49a9b0e20df68e2cc56720516972beaf9dde32e1a3c3798452eee67d0fe4f358206b0613a688546e1e9e0918005d91d1b02ddbc4a10317f5daba1edc1f5a0a9c1f23fb372b7291dbc7a26322ae539314ae0642eff103cad9e424e05b14225f84f89667ceb45b704fe055e2593d90f4483c38b88 ],
      "ivToBePublished": Uint8Array [ 67ff404b4dfb01a422ed04107eaf8e23 ],
      "target": ProfileIdentifier {
        "network": "localhost",
        "userId": "joey",
      },
    },
  },
}
`;

exports[`v38 E2E encryption: decrypted as author 1`] = `
Array [
  Object {
    "content": Object {
      "content": "hello world",
      "meta": undefined,
      "serializable": true,
      "type": "text",
      "version": 1,
    },
    "type": "success",
  },
]
`;

exports[`v38 E2E encryption: decrypted as jack 1`] = `
Array [
  Object {
    "event": "E2E",
    "type": "progress",
  },
  Object {
    "content": Object {
      "content": "hello world",
      "meta": undefined,
      "serializable": true,
      "type": "text",
      "version": 1,
    },
    "type": "success",
  },
]
`;

exports[`v38 E2E encryption: decrypted as joey 1`] = `
Array [
  Object {
    "event": "E2E",
    "type": "progress",
  },
  Object {
    "content": Object {
      "content": "hello world",
      "meta": undefined,
      "serializable": true,
      "type": "text",
      "version": 1,
    },
    "type": "success",
  },
]
`;

exports[`v38 E2E encryption: encrypted 1`] = `
Object {
  "author": ProfileIdentifier {
    "network": "localhost",
    "userId": "bob",
  },
  "e2e": Map {
    ProfileIdentifier {
      "network": "localhost",
      "userId": "jack",
    } => Object {
      "status": "fulfilled",
      "value": Object {
        "encryptedPostKey": Uint8Array [ 369a0d0df3233ff06da2647b4a5b58d48ec7f8c29ee42c7a81526f322dcc4e203ac7bc72f56e396d5344d0bb6b443ac369c0a382bc54600e3c9a0ea3fa1a0b3ccd1e715f7ec9b0bcb532c32907a80d4c96a20623a83435e47a18dc263651d51718773f9d50d5a3d75409c3f26cbd6fed5ea25234007f6d1a04372f56e7cf56f3a2f9cb57441df4dd6304 ],
        "ivToBePublished": Uint8Array [ 96a47ca504418e8c6040f10f80e720ba ],
        "target": ProfileIdentifier {
          "network": "localhost",
          "userId": "jack",
        },
      },
    },
  },
  "identifier": PostIVIdentifier {
    "network": "localhost",
    "postIV": "Z/9AS037AaQi7QQQfq+OIw==",
  },
  "output": "🎼4/4|ze6k+g+ozWUy6n7x2o781Az0uvcnaCV9yioJX9becu2U+DEvm3WwAHvnAalsWE3pZ5A6tDEnJ5ind6u2TZ3UnxFIHnpNuUwafW6hmE96pXdAo3FbPjtccSx2rXNGemLhmc1nAPTUVIkDgvSWaWDV2yN+LotSpIXYta/R9nxVozk4l6cUjFd5YKUO|Z/9AS037AaQi7QQQfq+OIw==|q1TVIE/Xa49R+MXl/IIHVZD7HFXJncTWgre5|_|A/vdGhnutITkTO12DBQf8YW0vvLriZigUgVMt+RUhxa/|0|bG9jYWxob3N0L2JvYg==:||",
  "postKey": CryptoKey { [opaque crypto key material] },
}
`;

exports[`v38 E2E encryption: parsed 1`] = `
Object {
  "author": Ok(Some(ProfileIdentifier {
    "network": "localhost",
    "userId": "bob",
  })),
  "authorPublicKey": Ok(Some(Object {
    "algr": 2,
    "key": CryptoKey { [opaque crypto key material] },
  })),
  "encrypted": Ok(Uint8Array [ ab54d5204fd76b8f51f8c5e5fc82075590fb1c55c99dc4d682b7b9 ]),
  "encryption": Ok(Object {
    "ephemeralPublicKey": Object {},
    "iv": Ok(Uint8Array [ 67ff404b4dfb01a422ed04107eaf8e23 ]),
    "ownersAESKeyEncrypted": Ok(Uint8Array [ cdeea4fa0fa8cd6532ea7ef1da8efcd40cf4baf72768257dca2a095fd6de72ed94f8312f9b75b0007be701a96c584de967903ab431272798a777abb64d9dd49f11481e7a4db94c1a7d6ea1984f7aa57740a3715b3e3b5c712c76ad73467a62e199cd6700f4d454890382f4966960d5db237e2e8b52a485d8b5afd1f67c55a3393897a7148c577960a50e ]),
    "type": "E2E",
  }),
  "signature": Ok(None),
  "version": -38,
}
`;

exports[`v38 public encryption: full v38 1`] = `
Object {
  "author": ProfileIdentifier {
    "network": "localhost",
    "userId": "alice",
  },
  "e2e": undefined,
  "identifier": PostIVIdentifier {
    "network": "localhost",
    "postIV": "AAECAwQFBgcICQoLDA0ODw==",
  },
  "output": "🎼4/4|oEHPyYfuDpTZBp+oUpe8ChOpRJCf5CdAv8kD2NieQtbN+h4VkT+5oI44GNkCmNh6JfVmCV4V5Qtrc7IsU2tNDS9WZNWHfqjtvA14s1UHGi2Yschz9o3WwC+0tRiCfRcUAXunzP+volvqd8wNkfwqfMEou3capIT5kzQdw31RihId0xXWHjwUqzYu|AAECAwQFBgcICQoLDA0ODw==|uE2/uj+YtxNuiCBQW+q3jLZKHXRAQDxYmpia|_|Aq/bVWAKvodJuURGk3enjE1gUiu2SELM8IIKIlNGqOWM|1|bG9jYWxob3N0L2FsaWNl:||",
  "postKey": CryptoKey { [opaque crypto key material] },
}
`;

exports[`v38 public encryption: full v38 decrypted 1`] = `
Array [
  Object {
    "content": Object {
      "content": "hello world",
      "meta": undefined,
      "serializable": true,
      "type": "text",
      "version": 1,
    },
    "type": "success",
  },
]
`;

exports[`v38 public encryption: full v38 parsed 1`] = `
Object {
  "author": Ok(Some(ProfileIdentifier {
    "network": "localhost",
    "userId": "alice",
  })),
  "authorPublicKey": Ok(Some(Object {
    "algr": 2,
    "key": CryptoKey { [opaque crypto key material] },
  })),
  "encrypted": Ok(Uint8Array [ b84dbfba3f98b7136e8820505beab78cb64a1d7440403c589a989a ]),
  "encryption": Ok(Object {
    "AESKey": Ok(CryptoKey { [opaque crypto key material] }),
    "iv": Ok(Uint8Array [ 000102030405060708090a0b0c0d0e0f ]),
    "type": "public",
  }),
  "signature": Ok(None),
  "version": -38,
}
`;

exports[`v38 public encryption: minimal v38 1`] = `
Object {
  "author": ProfileIdentifier {
    "network": "localhost",
    "userId": "alice",
  },
  "e2e": undefined,
  "identifier": PostIVIdentifier {
    "network": "localhost",
    "postIV": "AAECAwQFBgcICQoLDA0ODw==",
  },
  "output": "🎼4/4|oEHPyYfuDpTZBp+oUpe8ChOpRJCf5CdAv8kD2NieQtbN+h4VkT+5oI44GNkCmNh6JfVmCV4V5Qtrc7IsU2tNDS9WZNWHfqjtvA14s1UHGi2Yschz9o3WwC+0tRiCfRcUAXunzP+volvqd8wNkfwqfMEou3capIT5kzQdw31RihId0xXWHjwUqzYu|AAECAwQFBgcICQoLDA0ODw==|uE2/uj+YtxNuiCBQW+q3jLZKHXRAQDxYmpia|_||1|bG9jYWxob3N0L2FsaWNl:||",
  "postKey": CryptoKey { [opaque crypto key material] },
}
`;

exports[`v38 public encryption: minimal v38 decrypted 1`] = `
Array [
  Object {
    "content": Object {
      "content": "hello world",
      "meta": undefined,
      "serializable": true,
      "type": "text",
      "version": 1,
    },
    "type": "success",
  },
]
`;

exports[`v38 public encryption: minimal v38 parsed 1`] = `
Object {
  "author": Ok(Some(ProfileIdentifier {
    "network": "localhost",
    "userId": "alice",
  })),
  "authorPublicKey": Ok(None),
  "encrypted": Ok(Uint8Array [ b84dbfba3f98b7136e8820505beab78cb64a1d7440403c589a989a ]),
  "encryption": Ok(Object {
    "AESKey": Ok(CryptoKey { [opaque crypto key material] }),
    "iv": Ok(Uint8Array [ 000102030405060708090a0b0c0d0e0f ]),
    "type": "public",
  }),
  "signature": Ok(None),
  "version": -38,
}
`;
